--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100vh; 
+    min-height: 100vh;
+    padding: 16px; 
     margin: 0;
     background-color: hsl(212, 45%, 89%);
     font-family: "Outfit", serif;
@@ -35,38 +36,40 @@ main {
     border-radius: 20px;
     text-align: center;
     padding: 1em;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
 }
 
 /* Image */
 img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     border-bottom: 1px solid hsl(212, 45%, 89%);
     border-radius: 20px;
+    display: block;
 }
 
 /* Heading */
 h1 {
 color: hsl(218, 44%, 22%);
 font-weight: 700;
-font-size: 1em;
+font-size: 1.25rem;
+padding: 2em 1.5em;
 padding: 20px 15px;
 }
 
 h2 {
     color: hsl(216, 15%, 48%);
     font-weight: 400;
-    font-size: 0.7em;
-    padding: 0 15px 20px;
+    font-size: 0.85rem;
+    padding: 0 1.5em 2em;
 }
 
 /* Footer */
 footer {
-    font-size: 11px;
+    font-size: 0.7rem;
     text-align: center;
-    padding: 10px 0;
+    padding:  0.5em 0;
     background-color: hsl(0, 0%, 100%);
     border-top: 1px solid hsl(212, 45%, 89%);
     color: hsl(216, 15%, 48%);
